Analysis using SQL

--- a/data_preprocessing.ipynb
+++ b/data_preprocessing.ipynb
@@ -1,7 +1,6 @@
 {
  "cells": [
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "6b86b760-0ca8-47b3-a6b7-5c289facc6c5",
    "metadata": {},
@@ -11,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 1,
    "id": "0abbaf47-5a18-4c13-ab87-df847ebc305f",
    "metadata": {
     "tags": []
@@ -189,7 +188,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "18606985-8b1d-4cff-9152-814e75ab9bd3",
    "metadata": {},
@@ -459,7 +457,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "2bf00384-4a11-4ce7-8e69-5dd3356017fe",
    "metadata": {},
@@ -526,7 +523,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "27c91d3f-0b49-41da-8843-03066f13f23d",
    "metadata": {},
@@ -686,7 +682,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 15,
    "id": "6edbddd9",
    "metadata": {},
    "outputs": [
@@ -781,7 +777,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 16,
    "id": "90324b27",
    "metadata": {},
    "outputs": [
@@ -858,7 +854,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 17,
    "id": "1492b092",
    "metadata": {},
    "outputs": [
@@ -870,7 +866,7 @@
        "Name: KPIs_met_more_than_80, dtype: int64"
       ]
      },
-     "execution_count": 44,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -880,7 +876,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "96d94194",
    "metadata": {},
@@ -914,7 +909,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 19,
    "id": "21f626fc",
    "metadata": {},
    "outputs": [
@@ -1000,7 +995,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 20,
    "id": "8bc0f0f7",
    "metadata": {},
    "outputs": [],
@@ -1010,7 +1005,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 21,
    "id": "e96208bb",
    "metadata": {},
    "outputs": [
@@ -1023,7 +1018,7 @@
        "Name: education, dtype: int64"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1034,7 +1029,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 22,
    "id": "faf992eb",
    "metadata": {},
    "outputs": [
@@ -1312,7 +1307,7 @@
        "[17415 rows x 13 columns]"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1323,7 +1318,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 23,
    "id": "caeca636",
    "metadata": {},
    "outputs": [
@@ -1395,7 +1390,7 @@
        "17416                      1           0                  81  "
       ]
      },
-     "execution_count": 28,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1406,7 +1401,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 24,
    "id": "75393d43",
    "metadata": {},
    "outputs": [
@@ -1501,7 +1496,7 @@
        "17416                  81  "
       ]
      },
-     "execution_count": 29,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1512,7 +1507,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 25,
    "id": "1d7b4d80",
    "metadata": {},
    "outputs": [
@@ -1528,7 +1523,7 @@
        " 'recruitment_channel']"
       ]
      },
-     "execution_count": 49,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1542,7 +1537,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 26,
    "id": "75e0a82f",
    "metadata": {},
    "outputs": [
@@ -1628,7 +1623,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "648410b2",
    "metadata": {},
@@ -1638,7 +1632,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 27,
    "id": "f1c1e903",
    "metadata": {},
    "outputs": [
@@ -1651,7 +1645,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 54,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1662,7 +1656,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 28,
    "id": "eebaf10f",
    "metadata": {},
    "outputs": [
@@ -1686,7 +1680,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 29,
    "id": "ad3b4e25",
    "metadata": {},
    "outputs": [
@@ -1707,9 +1701,29 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "85659d9f-594b-4149-93eb-41f9f3cecf2a",
+   "metadata": {},
+   "source": [
+    "### Saving clean data in excel file:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "id": "643b2a2b-24ce-4910-a5f7-5172662143f4",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "df.to_excel('clean_data.xlsx', index=False)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f6ede2bb",
+   "id": "10e44f91-b0b5-4fd9-95cd-9e71432f10ac",
    "metadata": {},
    "outputs": [],
    "source": []
